add sbt options to not run out of space