@@ -13,5 +13,8 @@ link_lib sbt
 
 link_bin sbt sbt
 
+update_env SBT_HOME '$USR/lib/sbt'
+update_env SBT_OPTS '"-Xms2g -Xmx2g -XX:MaxPermSize=512M -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC"'
+
 popd
 
